# DSA

./: .clang-format
hw/homework01/: hw01.c
hw/hw01/: hw01.c
hw/hw02/: poly  polyOperations  polyOperations.c  polynty
hw/hw02/poly.dSYM/Contents/Resources/DWARF/: poly
hw/hw02/poly.dSYM/Contents/Resources/Relocations/aarch64/: poly.yml
hw/hw02/polynty.dSYM/Contents/: Info.plist
hw/hw02/polynty.dSYM/Contents/Resources/DWARF/: polynty
hw/hw02/polynty.dSYM/Contents/Resources/Relocations/aarch64/: polynty.yml
hw/hw03/: treeDepthAndLeafNodesCounter.c
hw/hw03/JPEGCompressor/: CMakeLists.txt  JPEGCompressor  compile.sh
hw/hw03/JPEGCompressor/include/: JPEGCompressor.h
hw/hw03/JPEGCompressor/src/: dct.c  huffman.c  main.c  quantization.c  zscan.c
